--- a/src/app/components/productgrid/ProductGrid.module.css
+++ b/src/app/components/productgrid/ProductGrid.module.css
@@ -62,3 +62,34 @@
     font-size: 1rem;
   }
   
+
+  .navList {
+    display: flex;
+    gap: 1rem;
+    padding: 0;
+    
+    list-style: none;
+    border-bottom: 2px solid #eee;
+    justify-content: center;
+  }
+  
+  .navList li {
+    padding: 0.5rem 1rem;
+  }
+  
+  .navList li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: 500;
+    transition: color 0.2s ease;
+  }
+  
+  .navList li a:hover {
+    color: #0b0b0b;
+  }
+  .active {
+    color: #36383a;
+    font-weight: bold;
+    border-bottom: 2px solid #1f22254f;
+  }
+  
