--- a/src/app/components/classicgrid/ClassicGrid.module.css
+++ b/src/app/components/classicgrid/ClassicGrid.module.css
@@ -16,9 +16,9 @@
   .card {
     position: relative;
     border: 1px solid black;
-    min-height: 300px;
+    min-height: 500px;
     overflow: hidden;
-    background-color: #B2BEB5;
+    background-color: rgb(234, 238, 239,0.5);
     font-size: x-large;
     
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -26,7 +26,7 @@
   
   .card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   }
   
   .card_link {
@@ -39,7 +39,7 @@
   .image_wrapper {
     position: relative;
     width: 100%;
-    height: 250px; /* Fixed height ensures image + overlay positioning works consistently */
+    height: 100%; /* Fixed height ensures image + overlay positioning works consistently */
   }
   
   .cardTitle {
