--- a/src/app/products/[id]/product.module.css
+++ b/src/app/products/[id]/product.module.css
@@ -1,32 +1,31 @@
 .productPage {
-    max-width: 1100px;
-    margin: 3em auto;
-    padding: 2em;
+
+    margin: 3em 1em;
+ 
   }
   
   .title {
     font-size: 2rem;
     font-weight: 700;
-    text-align: center;
-    margin-bottom: 2em;
     color: #222;
   }
   
   .productGrid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2em;
+    grid-template-columns: 1.5fr 1fr;
+    gap: 3em;
     align-items: start;
   }
   
   .imageBox {
     width: 100%;
-    height: auto;
+    height: 739px;
+    border: 1px solid;
   }
   
   .image {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: contain;
     
     border: 1px solid #ddd;
@@ -37,6 +36,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5em;
+    padding: 2em;
   }
   
   .accordion {
@@ -50,13 +50,21 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.5em;
-    margin-top: 1em;
+    /* margin-top: 1em; */
   }
   
   .optionBtn {
     text-transform: capitalize;
+    padding-left: 1em;
+    padding-right: 1em;
+    border: 1px solid #222 ;
+
   }
-  
+  .active {
+    background-color: #3f3f3f;
+    color: white;
+    border-color: #3f3f3f;
+  }
   .cartBtn {
     margin-top: 1em;
     display: flex;
@@ -71,4 +79,7 @@
       justify-content: center;
     }
   }
-  
+  .section{
+    border-bottom: 1px solid rgb(214, 213, 213);
+    padding-bottom: 2em;
+  }
