--- a/src/app/components/nav/Nav.module.css
+++ b/src/app/components/nav/Nav.module.css
@@ -1,5 +1,5 @@
 .nav_contain{
-padding: 2em;
+padding: 1em 2em;
 background-color: var(--button-inverted, #000);
 position: sticky;
 transition: transform 0.6s ease;
