--- a/src/app/(public)/products/[id]/product.module.css
+++ b/src/app/(public)/products/[id]/product.module.css
@@ -23,7 +23,8 @@
     border: 1px solid;
   }
   
-  .image {
+  .imageContain{
+    position: relative;
     width: 100%;
     height: 100%;
     object-fit: contain;
