--- a/src/app/(public)/cart/cart.module.css
+++ b/src/app/(public)/cart/cart.module.css
@@ -1,6 +1,6 @@
 .cartPage {
     padding: 2em;
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -89,5 +89,62 @@
     position: relative;
     height: 100px;
     width: 100px;
+  }
+  
+  .total_contain_box {
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    background-color: #fafafa;
+
+  }
+  
+  .total_contain {
+    width: 100%;
+    max-width: 700px;
+    background: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 500px;
+    overflow-y: auto;
+  }
+  
+  .heading {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+  
+  .label {
+    font-weight: 600;
+    margin-bottom: 0.3rem;
+  }
+  
+  .input {
+    padding: 0.75rem 1rem;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    transition: border-color 0.2s;
+  }
+  
+  .input:focus {
+    border-color: #333;
+    outline: none;
+  }
+  
+  
+  .total {
+    font-size: 1.4rem;
+    margin: 1rem 0;
+    text-align: center;
   }
   
