--- a/src/app/components/SalesSummery/SalesSummery.module.css
+++ b/src/app/components/SalesSummery/SalesSummery.module.css
@@ -11,7 +11,7 @@
     border: 1px solid var(--border-color);
     border-radius: var(--radius);
     padding: 1rem;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.5);
   }
   
   .chartContainer {
@@ -40,4 +40,10 @@
   
   .chartArea {
     stroke-width: 2px !important;
+  }
+  .cardValue{
+    text-align: center;
+    font-weight: 500;
+    font:bold;
+    font-size: 32px;
   }
